--- a/index1.html
+++ b/index1.html
@@ -4,9 +4,9 @@
 
 <html lang="en">
 <head>
-<link rel="stylesheet" href="C:\Users\Dell\OneDrive\Documents\style.css">
-<link rel="FaviconIcon" herf="C:\Users\Dell\OneDrive\Documents\favicon.png" type="image/x-icon">
-<link rel="shortcut" herf="C:\Users\Dell\OneDrive\Documents\favicon.png" type="image/x-icon">
+<link rel="stylesheet" href="css\style.css">
+<link rel="FaviconIcon" herf="favicon.png" type="image/x-icon">
+<link rel="shortcut" herf="favicon.png" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 img {
@@ -23,7 +23,7 @@ img {
   </header>
 
   <body>
-    <img src="C:\Users\Dell\OneDrive\Documents\banner.jpg" width="75%" alt=banner class="center">
+    <img src="images\banner.jpg" width="75%" alt=banner class="center">
     <h1 style="text-align:center;">Maaz Ali's portal</h1>
     <h2 style="text-align:center;">About Me</h2>
     <p style="text-align:center;">I am a student of FAST NUCES.</p>
