--- a/resume.html
+++ b/resume.html
@@ -5,9 +5,9 @@
 <html lang="en">
 <head>
 
-<link rel="stylesheet" href="C:\Users\Dell\OneDrive\Documents\style.css">
-<link rel="FaviconIcon" herf="C:\Users\Dell\OneDrive\Documents\favicon.png" type="image/x-icon">
-<link rel="shortcut" herf="C:\Users\Dell\OneDrive\Documents\favicon.png" type="image/x-icon">
+<link rel="stylesheet" href="css\style.css">
+<link rel="FaviconIcon" herf="favicon.png" type="image/x-icon">
+<link rel="shortcut" herf="favicon.png" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 img {
@@ -27,7 +27,7 @@ img {
 	
     <hr>
 
-    <img src="C:\Users\Dell\OneDrive\Documents\image.jpg" alt="Maaz Ali's picture" class= "center" width="50%" >
+    <img src="image.jpg" alt="Maaz Ali's picture" class= "center" width="50%" >
 
     <h1>Maaz Ali</h1>
     <h4>Sudent at FAST NUCES ISLAMABAD.</h4>
