--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@ img {
 	
     <hr>
 
-    <img src="image.jpg" alt="Maaz Ali's picture" class= "center" width="50%" >
+    <img src="images/image.jpg" alt="Maaz Ali's picture" class= "center" width="50%" >
 
     <h1>Maaz Ali</h1>
     <h4>Sudent at FAST NUCES ISLAMABAD.</h4>
