--- a/index1.html
+++ b/index1.html
@@ -5,8 +5,8 @@
 <html lang="en">
 <head>
 <link rel="stylesheet" href="css\style.css">
-<link rel="FaviconIcon" herf="favicon.png" type="image/x-icon">
-<link rel="shortcut" herf="favicon.png" type="image/x-icon">
+<link rel="FaviconIcon" herf="favicon.png" type="image/x-png">
+<link rel="shortcut" herf="favicon.png" type="image/x-png">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 img {
