--- a/resume.html
+++ b/resume.html
@@ -6,8 +6,8 @@
 <head>
 
 <link rel="stylesheet" href="css\style.css">
-<link rel="FaviconIcon" herf="favicon.png" type="image/x-icon">
-<link rel="shortcut" herf="favicon.png" type="image/x-icon">
+<link rel="FaviconIcon" herf="favicon.ico" type="image/x-icon">
+<link rel="shortcut" herf="favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 img {
